--- a/src/App.css
+++ b/src/App.css
@@ -130,6 +130,8 @@
   .nav-button {
     cursor: pointer;
     text-align: left;
+    border: 1px solid black;
+    width: 10%;
   }
 
   .nav-bar {
