--- a/src/App.css
+++ b/src/App.css
@@ -186,9 +186,65 @@
       right: 0px;
     }
 
-
+/* MAP STUFF ----------------------MAP STUFF ---------------------- MAP STUFF ---------------------- MAP STUFF ---------------------- MAP STUFF ----------------------  */
 .google-maps {
   position: absolute;
-  height: 100%;
+  height: 95%;
   width: 100%;
+  top: 35px;
+  /* left: 195px; */
+}
+
+/* .map-form {
+  position: absolute;
+  display: flex;
+  z-index: 10;
+  justify-content: center;
+} */
+
+.map-form {
+  width: 200px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  position: absolute;
+  z-index: 10;
+  top: 100px;
+  background-color: white;
+}
+
+.map-form form {
+  margin: 0;
+  padding: 0;
+}
+
+.map-form label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.map-form input[type="text"],
+.map-form input[type="text"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+}
+
+.map-form input[type="submit"] {
+  background-color: blue;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+}
+
+.map-form input[type="submit"]:hover {
+  background-color: rgb(25, 178, 229);
+}
+
+.map-header {
+  background: linear-gradient(to right, #00FF00, #00c324);
+  color: black;
+  -webkit-text-stroke: 0.2px black
 }
