added map and destination tracker

--- a/src/App.css
+++ b/src/App.css
@@ -203,7 +203,7 @@
 } */
 
 .map-form {
-  width: 200px;
+  width: 300px;
   margin: 0 auto;
   padding: 20px;
   border: 1px solid #ccc;
@@ -247,4 +247,15 @@
   background: linear-gradient(to right, #00FF00, #00c324);
   color: black;
   -webkit-text-stroke: 0.2px black
+}
+
+
+
+.map-center-button {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: blue;
+  color: white;
+  border: none;
 }
