--- a/src/App.css
+++ b/src/App.css
@@ -153,10 +153,12 @@
       display: flex;
       align-items: center;
       font-size: 18px;
+      justify-content: center;
       font-weight: bold;
       margin-bottom: 10px;
-      background-color: rgb(198, 231, 198);
-      color: black
+      background-color: rgb(255, 255, 255);
+      color: black;
+      box-shadow: 5px 10px 10px grey;
   }
       /* Add an avatar image */
       .avatar {
