--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,15 @@
 .App {
   text-align: center;
+  background-image: url('http://www.minnowasko.com/mw/wp-content/gallery/edison-lofts/3-main-st-20141009.jpg');
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
 }
+
+
 
 .App-logo {
   height: 40vmin;
@@ -101,28 +110,29 @@
 
   /* HEADER */
 
-  .header {
+  .dashboard-header {
     background-color: #333; /* Set a dark background color */
-
-    text-align: center; /* Center the text */
-    color: white; /* Make the text white */
+    background-color: rgb(255, 255, 255);
+    box-shadow: 5px 10px 10px grey; 
+    text-align: center; 
+    color: black; 
   }
   
   /* Style the header text */
-  .header h1 {
+  .dashboard-header h1 {
     font-size: 32px; /* Increase the font size */
     font-weight: bold; /* Make the text bold */
     margin: 0; /* Remove the margin */
   }
   
   /* Style the header links */
-  .header a {
+  .dashboard-header a {
     color: white; /* Make the links white */
     text-decoration: none; /* Remove the underline */
   }
   
   /* Style the header links when they are hovered over */
-  .header a:hover {
+  .dashboard-header a:hover {
     color: #f1f1f1; /* Change the link color on hover */
   }
 
@@ -147,9 +157,11 @@
     position: relative;
     left: 37%;
     margin-bottom: 10px;
+    margin-top: 5px;
+    background-color: white;
   }
     /* Add some style to the header */
-  .header {
+  .post-header {
       display: flex;
       align-items: center;
       font-size: 18px;
@@ -158,8 +170,8 @@
       margin-bottom: 10px;
       background-color: rgb(255, 255, 255);
       color: black;
-      box-shadow: 5px 10px 10px grey;
-  }
+      box-shadow: 5px 10px 10px grey; 
+    }
       /* Add an avatar image */
       .avatar {
         width: 50px;
@@ -260,4 +272,156 @@
   background-color: blue;
   color: white;
   border: none;
+}
+
+
+.forum-post-box {
+  overflow: auto;
+  height: 700px;
+  width: 100%;
+}
+
+
+/* Side MENU */
+
+.header {
+  display: block;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 100%;
+  box-shadow: none;
+  background: linear-gradient(90deg, #0be2bb 0%, #3F5EFB 100%);
+  position: fixed;
+  height: 60px!important;
+  overflow: hidden;
+  z-index: 10;
+  box-shadow: 0px 5px 5px black; 
+}
+.main {
+  margin: 0 auto;
+  display: block;
+  height: 100%;
+  margin-top: 60px;
+}
+.mainInner{
+  display: table;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+}
+.mainInner div{
+  display:table-cell;
+  vertical-align: middle;
+  font-size: 3em;
+  font-weight: bold;
+  letter-spacing: 1.25px;
+}
+#sidebarMenu {
+  height: 100%;
+  position: fixed;
+  left: 0;
+  width: 250px;
+  margin-top: 60px;
+  transform: translateX(-250px);
+  transition: transform 250ms ease-in-out;
+  background: linear-gradient(180deg, #0be2bb 0%, #3F5EFB 100%);
+
+}
+.sidebarMenuInner{
+  margin:0;
+  padding:0;
+  border-top: 1px solid rgba(255, 255, 255, 0.10);
+}
+.sidebarMenuInner li{
+  list-style: none;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding: 20px;
+  cursor: pointer;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.10);
+}
+.sidebarMenuInner li span{
+  display: block;
+  font-size: 14px;
+  color: rgba(255, 255, 255, 0.50);
+}
+.sidebarMenuInner li a{
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: bold;
+  cursor: pointer;
+  text-decoration: none;
+}
+input[type="checkbox"]:checked ~ #sidebarMenu {
+  transform: translateX(0);
+}
+
+input[type=checkbox] {
+  transition: all 0.3s;
+  box-sizing: border-box;
+  display: none;
+}
+.sidebarIconToggle {
+  transition: all 0.3s;
+  box-sizing: border-box;
+  cursor: pointer;
+  position: absolute;
+  z-index: 99;
+  height: 100%;
+  width: 100%;
+  top: 22px;
+  left: 15px;
+  height: 22px;
+  width: 22px;
+}
+.spinner {
+  transition: all 0.3s;
+  box-sizing: border-box;
+  position: absolute;
+  height: 3px;
+  width: 100%;
+  background-color: #fff;
+}
+.horizontal {
+  transition: all 0.3s;
+  box-sizing: border-box;
+  position: relative;
+  float: left;
+  margin-top: 3px;
+}
+.diagonal.part-1 {
+  position: relative;
+  transition: all 0.3s;
+  box-sizing: border-box;
+  float: left;
+}
+.diagonal.part-2 {
+  transition: all 0.3s;
+  box-sizing: border-box;
+  position: relative;
+  float: left;
+  margin-top: 3px;
+}
+input[type=checkbox]:checked ~ .sidebarIconToggle > .horizontal {
+  transition: all 0.3s;
+  box-sizing: border-box;
+  opacity: 0;
+}
+input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-1 {
+  transition: all 0.3s;
+  box-sizing: border-box;
+  transform: rotate(135deg);
+  margin-top: 8px;
+}
+input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
+  transition: all 0.3s;
+  box-sizing: border-box;
+  transform: rotate(-135deg);
+  margin-top: -9px;
+}
+
+.header-text {
+  position: relative;
+  top: 100px;
 }
