--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,8 @@
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    background-color: white;
+    box-shadow: 0px 2px 2px black;
   }
 
   .login-form form {
@@ -165,7 +167,7 @@
       display: flex;
       align-items: center;
       font-size: 18px;
-      justify-content: center;
+      justify-content: left;
       font-weight: bold;
       margin-bottom: 10px;
       background-color: rgb(255, 255, 255);
@@ -296,6 +298,11 @@
   overflow: hidden;
   z-index: 10;
   box-shadow: 0px 5px 5px black; 
+
+}
+
+.header h1 {
+  color: black;
 }
 .main {
   margin: 0 auto;
@@ -422,6 +429,12 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
 }
 
 .header-text {
+  position: relative;
+  top: 100px;
+}
+
+
+.forum-post-container {
   position: relative;
   top: 100px;
 }
