--- a/src/App.css
+++ b/src/App.css
@@ -281,6 +281,7 @@
   overflow: auto;
   height: 700px;
   width: 100%;
+  position: absolute;
 }
 
 
@@ -437,4 +438,51 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
 .forum-post-container {
   position: relative;
   top: 100px;
+}
+
+.forum-submission-form {
+  width: 300px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: white;
+  box-shadow: 0px 2px 2px black;
+}
+
+.forum-submission-form form {
+  margin: 0;
+  padding: 0;
+}
+
+.forum-submission-form label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.forum-submission-form input[type="text"]{
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+}
+
+.forum-submission-form input[type="submit"] {
+  background-color: blue;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+}
+
+.forum-submission-form input[type="submit"]:hover {
+  background-color: rgb(25, 178, 229);
+}
+
+
+.forum-submission-form-box {
+  position: relative;
+  width: 200px;
+  z-index: 5;
+  float: left;
+  top: 200px
 }
