--- a/src/App.css
+++ b/src/App.css
@@ -486,3 +486,45 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
   float: left;
   top: 200px
 }
+
+
+.annoucements {
+  z-index: 5;
+  color: black;
+  top: 100px;
+  font-size: 20px;
+  background-color: white;
+  opacity: 0.80;
+  width: 40%;
+  margin: auto;
+  position: relative;
+  border-radius: 15px;
+  box-shadow: 0 0 0 10px rgba(0,0,0,0.1), 0 0 0 15px rgba(0,0,0,0.1);
+  text-shadow: inset 0 0 5px rgba(0,0,0,0.5);
+  /* box-shadow: inset 0 10px 20px rgba(0,0,0,0.19), inset 0 6px 6px rgba(0,0,0,0.23); */
+  
+}
+
+.business-shoutout-box {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  border-radius: 15px;
+  top: 200px;
+  left: 60%;
+  background-color: white;
+  border: #282c34;
+}
+
+
+.tenant-details {
+  z-index: 5;
+  position: relative;
+  top: 100px;
+  height: 550px;
+  width: 1200px;
+  margin: auto;
+  border-radius: 100px;
+  box-shadow: 0px 8px 8px black;
+  background-color: white;
+}
