--- a/src/App.css
+++ b/src/App.css
@@ -314,7 +314,7 @@
   max-width: 100%;
   box-shadow: none;
   /* background: linear-gradient(90deg, #0be2bb 0%, #3F5EFB 100%); */
-  background-color: rgba(67, 67, 98, 0.442);
+  background-color: rgb(67, 67, 98);
   position: fixed;
   height: 40px!important;
   overflow: hidden;
@@ -324,7 +324,8 @@
 }
 
 .header h1 {
-  color: black;
+  color: white;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .main {
   margin: 0 auto;
@@ -550,6 +551,11 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
   box-shadow: 0 5px 5px rgb(0, 0, 0);
   border-radius: 15px;
   transition: all 0.75s;
+  color: white;
+  background-color: rgb(67, 67, 98);
+}
+.business-shoutout-box h1:hover{
+  background-color: rgb(98, 98, 145);
 }
 
 .tenant-details {
@@ -608,10 +614,12 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
   box-shadow: 0 5px 5px rgb(0, 0, 0);
   border-radius: 15px;
   transition: all 0.75s;
+  color: white;
+  background-color: rgb(67, 67, 98);
 }
 
 .upcoming-events-box h1:hover {
-  background-color: #ccc;
+  background-color: rgb(98, 98, 145);
 }
 
 
@@ -634,6 +642,8 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
   box-shadow: 0 5px 5px rgb(0, 0, 0);
   border-radius: 15px;
   font-size: 18px;
+  color: white;
+  background-color:rgb(54, 85, 117)
 }
 
 .upcoming-events-posts h3 {
