--- a/src/App.css
+++ b/src/App.css
@@ -210,9 +210,10 @@
 /* MAP STUFF ----------------------MAP STUFF ---------------------- MAP STUFF ---------------------- MAP STUFF ---------------------- MAP STUFF ----------------------  */
 .google-maps {
   position: absolute;
-  height: 95%;
+  height: 100%;
   width: 100%;
-  top: 35px;
+  top: 20px;
+  z-index: 1;
   /* left: 195px; */
 }
 
@@ -242,6 +243,8 @@
   position: absolute;
   z-index: 10;
   top: 100px;
+  left: 10px;
+  border: 1px solid black;
   background-color: white;
 }
 
@@ -289,6 +292,11 @@
   background-color: blue;
   color: white;
   border: none;
+  transition: all 0.5s;
+}
+
+.map-center-button:hover {
+  transform: scale(1.3);
 }
 
 
@@ -561,14 +569,41 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
 .tenant-details {
   z-index: 5;
   position: relative;
+  border: 1px solid black;
   top: 100px;
   height: 550px;
-  width: 1200px;
+  width: 1150px;
   margin: auto;
   border-radius: 100px;
   box-shadow: 0px 8px 8px black;
   background-color: white;
+  
 }
+
+.tenant-details img {
+  position: relative;
+  height: 200px;
+  border-radius: 100px;
+  top: -180px;
+  right: 470px;
+}
+
+.tenant-details h2 {
+  position: relative;
+  font-size: 50px;
+  top: 100px;
+  right: 200px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+.tenant-details h3 {
+  position: relative;
+  top: 100px;
+  right: 160px;
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  
+}
+
 
 .event-homepage-background {
   background-image: url("https://s3.amazonaws.com/eventbrite-s3/marketing/landingpages/assets/photography/distribution-header-footer.jpg");
@@ -680,3 +715,44 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
 .alert.warning {
   background-color: #ff9800; /* Orange */
 }
+
+
+
+
+
+/* CSS */
+.calculate-route-button {
+  align-items: center;
+  height:10px;
+  width: 150px;
+  background-color: #fff;
+  border-radius: 12px;
+  box-shadow: transparent 0 0 0 3px,rgba(18, 18, 18, .1) 0 10px 20px;
+  box-sizing: border-box;
+  color: #121212;
+  cursor: pointer;
+  display: inline-flex;
+  flex: 1 1 auto;
+  font-family: Inter,sans-serif;
+  font-size: 1.2rem;
+  font-weight: 700;
+  justify-content: center;
+  line-height: 1;
+  margin: auto;
+  outline: none;
+  padding: 1rem 1.2rem;
+  padding-top: 15px;
+  text-align: center;
+  text-decoration: none;
+  transition: box-shadow .5s,-webkit-box-shadow .5s;
+  white-space: nowrap;
+  border: 0;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.calculate-route-button:hover {
+  box-shadow: #121212 0 0 0 3px, transparent 0 0 0 0;
+}
+
