--- a/src/App.css
+++ b/src/App.css
@@ -158,7 +158,7 @@
   /* FORUM STYLING */
   .forum-post {
     /* Add a border and some padding to the container */
-    border: 1px solid #ccc;
+    border: 1px solid rgb(0, 0, 0);
     padding: 30px;
     width: 60%;
     position: relative;
@@ -166,11 +166,31 @@
     margin-bottom: 10px;
     margin-top: 5px;
     background-color: white;
+    border-radius: 15px;
+    transition: all 0.2s;
+  }
+
+  .forum-post:hover{
+    transform: scale(1.03);
+  }
+
+  .forum-post p {
+    font-size: 15px;
+    position: relative;
+    right: 0px;
+    bottom: 20px;
+    border: 1px solid black;
+    border-radius: 15px;
+    width: 100px;
+    /* background-color: #2196F3; */
   }
     /* Add some style to the header */
   .post-header {
       display: flex;
-      align-items: center;
+      width: 200px;
+      border-radius: 15px;
+      border: 1px solid black;
+      top: -20px;
       font-size: 18px;
       justify-content: left;
       font-weight: bold;
@@ -189,9 +209,12 @@
     
   
     /* Add some style to the body */
-    .body {
+    .forum-post-body {
+      position: relative;
       font-size: 16px;
       line-height: 1.5;
+      width: 500px;
+      left: 200px;
     }
   
 
@@ -302,7 +325,7 @@
 
 .forum-post-box {
   overflow: auto;
-  height: 700px;
+  height: 900px;
   width: 100%;
   position: absolute;
 }
@@ -477,6 +500,8 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
 }
 
 .forum-submission-form {
+  position: relative;
+  left: 100px;
   width: 300px;
   margin: 0 auto;
   padding: 20px;
@@ -613,8 +638,8 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
 }
 
 
-.event-post {
-  /* Add a border and some padding to the container */
+/* .event-post { */
+  /* Add a border and some padding to the container
   border: 1px solid #ccc;
   padding: 30px;
   width: 60%;
@@ -625,7 +650,7 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
   background-color: white;
   background-image: url("https://edisonlofts.com/images/EdisonLofts%2027.jpg");
   background-size: cover;
-}
+} */
 
 
 .upcoming-events-box {
@@ -756,3 +781,20 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
   box-shadow: #121212 0 0 0 3px, transparent 0 0 0 0;
 }
 
+.event-post {
+  /* Add a border and some padding to the container */
+  border: 1px solid rgb(0, 0, 0);
+  padding: 30px;
+  width: 60%;
+  position: relative;
+  left: 37%;
+  margin-bottom: 10px;
+  margin-top: 5px;
+  background-color: white;
+  border-radius: 15px;
+  transition: all 0.2s;
+}
+
+.event-post:hover{
+  transform: scale(1.03);
+}
