--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   /* background-image: url('http://www.minnowasko.com/mw/wp-content/gallery/edison-lofts/3-main-st-20141009.jpg'); */
-  background-color:white;
+  background-color: #303245;
   position: absolute;
   top: 0;
   left: 0;
@@ -11,8 +11,11 @@
 }
 
 .login-page {
-  background-image: url('http://www.minnowasko.com/mw/wp-content/gallery/edison-lofts/3-main-st-20141009.jpg');
+  /* background-image: url('http://www.minnowasko.com/mw/wp-content/gallery/edison-lofts/3-main-st-20141009.jpg'); */
+  /* height: 100%;
+  background-size: cover; */
   height: 100%;
+  background-color: #303245;
 }
 
 
@@ -810,11 +813,13 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 20;
 }
 
 .modal-content {
-  width: 500px;
-  background-color: #fff;
+  width: 350px;
+  background-color: #15172b;
+  border-radius: 20px;
 }
 
 .modal-header, .modal-footer {
@@ -829,4 +834,201 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
   padding: 10px;
   border-top: 1px solid #eee;
   border-bottom: 1px solid #eee;
+}
+
+/* LOGIN FORM - NEW */
+
+.form {
+  background-color: #15172b;
+  position: relative;
+  border-radius: 20px;
+  box-sizing: border-box;
+  height: 500px;
+  padding: 20px;
+  width: 320px;
+  margin: auto;
+  top: 10%;
+}
+
+.title {
+  color: #eee;
+  font-family: sans-serif;
+  font-size: 36px;
+  font-weight: 600;
+  margin-top: 30px;
+  margin-bottom: 40px;
+}
+
+.subtitle {
+  color: #eee;
+  font-family: sans-serif;
+  font-size: 12px;
+  font-weight: 600;
+  margin-top: 0px;
+}
+
+.input-container {
+  height: 50px;
+  position: relative;
+  width: 100%;
+}
+
+.ic1 {
+  margin-top: 20px;
+}
+
+.ic2 {
+  margin-top: 20px;
+}
+
+.input {
+  background-color: #303245;
+  border-radius: 12px;
+  border: 0;
+  box-sizing: border-box;
+  color: #eee;
+  font-size: 18px;
+  height: 100%;
+  outline: 0;
+  padding: 4px 20px 0;
+  width: 100%;
+}
+
+.cut {
+  background-color: #15172b;
+  border-radius: 10px;
+  height: 20px;
+  left: 20px;
+  position: absolute;
+  top: -20px;
+  transform: translateY(0);
+  transition: transform 200ms;
+  width: 85px;
+
+}
+
+.cut-short {
+  width: 50px;
+}
+
+.input:focus ~ .cut,
+.input:not(:placeholder-shown) ~ .cut {
+  transform: translateY(8px);
+}
+
+.placeholder {
+  color: #65657b;
+  font-family: sans-serif;
+  left: 20px;
+  line-height: 14px;
+  pointer-events: none;
+  position: absolute;
+  transform-origin: 0 50%;
+  transition: transform 200ms, color 200ms;
+  top: 20px;
+}
+
+.input:focus ~ .placeholder,
+.input:not(:placeholder-shown) ~ .placeholder {
+  transform: translateY(-30px) translateX(10px) scale(0.75);
+}
+
+.input:not(:placeholder-shown) ~ .placeholder {
+  color: #808097;
+}
+
+.input:focus ~ .placeholder {
+  color: #dc2f55;
+}
+
+.submit {
+  background-color: #08d;
+  border-radius: 12px;
+  border: 0;
+  box-sizing: border-box;
+  color: #eee;
+  cursor: pointer;
+  font-size: 18px;
+  height: 50px;
+  margin-top: 38px;
+  outline: 0;
+  text-align: center;
+  width: 100%;
+}
+
+.submit:active {
+  background-color: #06b;
+}
+
+
+.login-page-button {
+  align-items: center;
+  height:10px;
+  width: 150px;
+  background-color: #fff;
+  border-radius: 12px;
+  box-shadow: transparent 0 0 0 3px,rgba(18, 18, 18, .1) 0 10px 20px;
+  box-sizing: border-box;
+  color: #121212;
+  cursor: pointer;
+  display: inline-flex;
+  flex: 1 1 auto;
+  font-family: Inter,sans-serif;
+  font-size: 1.2rem;
+  font-weight: 700;
+  justify-content: center;
+  line-height: 1;
+  margin: auto;
+  outline: none;
+  padding: 1rem 1.2rem;
+  padding-top: 15px;
+  text-align: center;
+  text-decoration: none;
+  transition: box-shadow .5s,-webkit-box-shadow .5s;
+  white-space: nowrap;
+  border: 0;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+
+}
+
+.login-page-button:hover {
+  box-shadow: #00ff08 0 0 0 3px, transparent 0 0 0 0;
+}
+
+.create-account-button {
+  align-items: center;
+  height:10px;
+  width: 150px;
+  background-color: #fff;
+  border-radius: 12px;
+  box-shadow: transparent 0 0 0 3px,rgba(18, 18, 18, .1) 0 10px 20px;
+  box-sizing: border-box;
+  color: #121212;
+  cursor: pointer;
+  display: inline-flex;
+  flex: 1 1 auto;
+  font-family: Inter,sans-serif;
+  font-size: 1.2rem;
+  font-weight: 700;
+  justify-content: center;
+  line-height: 1;
+  margin: auto;
+  outline: none;
+  padding: 1rem 1.2rem;
+  padding-top: 15px;
+  text-align: center;
+  text-decoration: none;
+  transition: box-shadow .5s,-webkit-box-shadow .5s;
+  white-space: nowrap;
+  border: 0;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+
+}
+
+.create-account-button:hover {
+  box-shadow: #939393 0 0 0 3px, transparent 0 0 0 0;
 }
