--- a/src/App.css
+++ b/src/App.css
@@ -876,7 +876,7 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
 
 /* LOGIN FORM - NEW */
 
-.form {
+.form{
   background-color: #15172b;
   position: relative;
   border-radius: 20px;
@@ -889,6 +889,34 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
   box-shadow: 0 0 10px #000, 0px 0px 12px #ccc;
   transition: all 0.2s;
 }
+
+.form-flipped {
+  background-color: #15172b;
+  position: relative;
+  border-radius: 20px;
+  box-sizing: border-box;
+  height: 500px;
+  padding: 20px;
+  width: 320px;
+  margin: auto;
+  top: 10%;
+  box-shadow: 0 0 10px #000, 0px 0px 12px #ccc;
+  transition: all 0.2s;
+}
+
+/* .form-back{
+  background-color: #15172b;
+  position: relative;
+  border-radius: 20px;
+  box-sizing: border-box;
+  height: 500px;
+  padding: 20px;
+  width: 320px;
+  margin: auto;
+  top: 10%;
+  box-shadow: 0 0 10px #000, 0px 0px 12px #ccc;
+  transition: all 0.2s;
+} */
 
 /* .form:hover {
   transform: scale(0.9);
@@ -1076,3 +1104,37 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
 .create-account-button:hover {
   box-shadow: #939393 0 0 0 3px, transparent 0 0 0 0;
 }
+
+
+
+
+/* FLIP CARD STUFF?? */ /* FLIP CARD STUFF?? *//* FLIP CARD STUFF?? *//* FLIP CARD STUFF?? *//* FLIP CARD STUFF?? *//* FLIP CARD STUFF?? *//* FLIP CARD STUFF?? *//* FLIP CARD STUFF?? *//* FLIP CARD STUFF?? *//* FLIP CARD STUFF?? */
+.flip-card-inner {
+  perspective: 1000px;
+}
+
+.flip-card-front,
+.flip-card-back {
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.flip-card-front {
+  backface-visibility: hidden;
+}
+
+.flip-card-back {
+  transform: rotateY(180deg);
+  backface-visibility: hidden;
+}
+
+.flipped .flip-card-front {
+  transform: rotateY(180deg);
+}
+
+.flipped .flip-card-back {
+  transform: rotateY(360deg);
+}
+
+
+/* FLIP CARD STUFF?? */ /* FLIP CARD STUFF?? *//* FLIP CARD STUFF?? *//* FLIP CARD STUFF?? *//* FLIP CARD STUFF?? *//* FLIP CARD STUFF?? *//* FLIP CARD STUFF?? *//* FLIP CARD STUFF?? *//* FLIP CARD STUFF?? *//* FLIP CARD STUFF?? *//* FLIP CARD STUFF?? */ /* FLIP CARD STUFF?? *//* FLIP CARD STUFF?? *//* FLIP CARD STUFF?? *//* FLIP CARD STUFF?? *//* FLIP CARD STUFF?? *//* FLIP CARD STUFF?? *//* FLIP CARD STUFF?? *//* FLIP CARD STUFF?? *//* FLIP CARD STUFF?? */
