--- a/src/App.css
+++ b/src/App.css
@@ -1283,3 +1283,50 @@ width: 170px;
 border: 1px solid #03e9f4;
 font-size: 14px;
 }
+
+
+.forum-details-modal {
+  position: fixed;
+  color: white;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 20;
+}
+
+.forum-details-modal-content {
+  width: 550px;
+  height: 400px;
+  background-color: #15172b;
+  border-radius: 20px;
+}
+
+.forum-details-modal-header{ 
+    padding: 10px;
+}
+
+.forum-details-modal-footer {
+  border-bottom: 1px solid white;
+}
+
+.forum-details-modal-title {
+  margin: 0;
+}
+
+#comment-form {
+  width: 500px;
+  margin: 0 auto;
+}
+#comment-form label {
+  display: block;
+  margin-bottom: 5px;
+}
+#comment-form textarea {
+  width: 100%;
+  height: 50px;
+}
