--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   width: 100%;
   height: 100%;
   background-size: cover;
+  z-index: 1;
 }
 
 .login-page {
@@ -619,7 +620,7 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
   height: 550px;
   width: 1150px;
   margin: auto;
-  border-radius: 100px;
+  border-radius: 20px;
   box-shadow: 0px 8px 8px black;
   background-color: white;
   
@@ -1315,10 +1316,23 @@ font-size: 14px;
 }
 
 .forum-details-modal-content {
-  width: 550px;
-  height: 400px;
+  width: 750px;
+  height: 600px;
   background-color: #15172b;
   border-radius: 20px;
+  overflow: auto;
+}
+
+.forum-details-modal-content p {
+  border-bottom: 1px solid white;
+  /* border-top: 1px solid white; */
+  position: relative;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin: auto;
+  width: 90%;
+  font-size: 16px;
+
 }
 
 .forum-details-modal-header{ 
@@ -1331,6 +1345,14 @@ font-size: 14px;
 
 .forum-details-modal-title {
   margin: 0;
+  font-size: 20px;
+}
+
+.forum-details-modal-body {
+  width: 500px;
+  margin: auto;
+  padding-bottom: 10px;
+  font-size: 18px;
 }
 
 #comment-form {
@@ -1346,3 +1368,76 @@ font-size: 14px;
   height: 50px;
 }
 
+.reply-delete-button {
+  
+  position: relative;
+  left: 40%;
+  bottom: 0px;
+  background-color: #15172b;
+  color: white;
+  border: 1px solid #15172b;
+  border-radius: 20px;
+  transition: all 0.2s;
+}
+
+.reply-delete-button:hover {
+  box-shadow: inset 0px 0px 3px white;
+}
+
+.reply-edit-button {
+  
+  position: relative;
+  left: 40%;
+  bottom: 5=0px;
+  background-color: #15172b;
+  color: white;
+  border: 1px solid #15172b;
+  border-radius: 20px;
+  transition: all 0.2s;
+}
+
+.reply-edit-button:hover {
+  box-shadow: inset 0px 0px 3px white;
+}
+
+
+
+
+
+/* CSS */
+.button-16 {
+  background-color: #f8f9fa;
+  border: 1px solid #f8f9fa;
+  border-radius: 4px;
+  color: #3c4043;
+  cursor: pointer;
+  font-family: arial,sans-serif;
+  font-size: 14px;
+  height: 25px;
+  line-height: 27px;
+  min-width: 54px;
+  padding: 0 16px;
+  text-align: center;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: pre;
+}
+
+.button-16:hover {
+  border-color: #dadce0;
+  box-shadow: rgba(0, 0, 0, .1) 0 1px 1px;
+  color: #202124;
+}
+
+.button-16:focus {
+  border-color: #4285f4;
+  outline: none;
+}
+
+.lease-form {
+  background-color: white;
+  position: relative;
+  /* bottom: 200px; */
+  
+}
