--- a/src/App.css
+++ b/src/App.css
@@ -657,16 +657,19 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
 .tenant-contact-info {
   left: 50%;
   /* border-top: 1px solid black; */
-  position: fixed;
+  position: absolute;
   width: 50%;
-  bottom: 200px;
+  bottom: 370px;
 }
 
 .tenant-forum-activity-box{
+  position: absolute;
   overflow: auto;
   /* border: 1px solid black; */
-  width: 50%;
+  width: 45%;
   height: 35%;
+  top: 350px;
+  left: 25px;
 }
 
 .tenant-forum-activity {
@@ -677,6 +680,14 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
 .tenant-forum-activity:hover {
   box-shadow: inset 0px 0px 10px #06b;
   cursor: pointer;
+}
+
+.tenant-activity-box-title {
+  position: absolute;
+  top: 250px;
+  left: 520px;
+  border-bottom: 1px solid black;
+  
 }
 /* 
 .tenant-details h2 {
@@ -746,7 +757,7 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
 } */
 
 
-.upcoming-events-box {
+.upcoming-events-box-light {
   position: absolute;
   font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
   width: 550px;
@@ -759,12 +770,30 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
   margin: auto;
   border: 1px solid black;
   box-shadow: 0 5px 5px rgb(0, 0, 0);
-  background-image: url('https://img.freepik.com/premium-vector/confetti-vector-illustration-festival-background-simple-tinsel-confetti-explosion-red-green-golden-blue-confetti-white-background-event-party-celebration_585735-307.jpg?w=2000');
+  background-color: white;
   background-size: cover;
   background-repeat: no-repeat;
 }
 
-.upcoming-events-box h1 {
+.upcoming-events-box-dark {
+  position: absolute;
+  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
+  width: 550px;
+  height: 450px;
+  border-radius: 15px;
+  top: 200px;
+  left: 5%;
+  background-color: rgba(0, 0, 0, 0.485);
+  border: #282c34;
+  margin: auto;
+  border: 1px solid black;
+  box-shadow: 0 5px 5px rgb(0, 0, 0);
+  /* background-color: white; */
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.upcoming-events-box-dark h1 {
   box-shadow: 0 5px 5px rgb(0, 0, 0);
   font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
   border-radius: 15px;
@@ -773,13 +802,25 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
   background-color: rgb(67, 67, 98);
 }
 
-.upcoming-events-box h1:hover {
-  background-color: rgb(98, 98, 145);
+.upcoming-events-box-light h1 {
+  box-shadow: 0 5px 5px rgb(0, 0, 0);
+  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
+  border-radius: 15px;
+  transition: all 0.75s;
+  color: white;
+  background-color: rgb(43, 136, 212);
 }
 
 
+.upcoming-events-box-dark h1:hover {
+  background-color: rgb(98, 98, 145);
+}
+.upcoming-events-box-light h1:hover {
+  background-color: rgb(47, 203, 227);
+}
 
-.upcoming-events-posts {
+
+.upcoming-events-posts-light {
     /* Add a border and some padding to the container */
     border: 2px solid black;
     border-radius: 15px;
@@ -791,7 +832,20 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
     margin-top: 20px;
     background-color: white;
   }
-.upcoming-events-posts h2 {
+
+.upcoming-events-posts-dark {
+  /* Add a border and some padding to the container */
+  border: 2px solid black;
+  border-radius: 15px;
+  padding: 30px;
+  width: 80%;
+  position: relative;
+  left: 0%;
+  margin: auto;
+  margin-top: 20px;
+  background-color: rgba(52, 51, 51, 0.467);  
+}
+.upcoming-events-posts-light h2 {
   position: relative;
   top: -31px;
   box-shadow: 0 5px 5px rgb(0, 0, 0);
@@ -801,23 +855,53 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
   background-color:rgb(54, 85, 117)
 }
 
-.upcoming-events-posts h3 {
+
+.upcoming-events-posts-dark h2 {
+  position: relative;
+  top: -31px;
+  box-shadow: 0 5px 5px rgb(0, 0, 0);
+  border-radius: 15px;
+  font-size: 18px;
+  color: white;
+  background-color:rgb(54, 85, 117)
+}
+
+
+
+.upcoming-events-posts-dark h3 {
   margin-top: 0px;
   position: relative;
   top: -40px;
   border-bottom: 1px solid black;
   font-size: 15px;
+  color: white
 }
 
-.upcoming-events-posts p {
+.upcoming-events-posts-light h3 {
+  margin-top: 0px;
+  position: relative;
+  top: -40px;
+  border-bottom: 1px solid black;
+  font-size: 15px;
+  color: black;}
+
+.upcoming-events-posts-light p {
   position: relative;
   margin: auto;
   top: -30px;
+  color: black;
 }
 
-.alert {
+.upcoming-events-posts-dark p {
+  position: relative;
+  margin: auto;
+  top: -30px;
+  color: white;
+}
+
+.alert-dark{
   padding: 20px;
-  background-color: #f44336; /* Red */
+  
   color: white;
   margin: auto;
   position: relative;
@@ -826,24 +910,28 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
   /* height: 20px; */
   text-align: center;
   top: 50px;
-  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;;
-}
-
-.alert.success {
-  background-color: #4CAF50; /* Green */
-}
-
-.alert.info {
-  background-color: rgb(67, 67, 98);
+  background: rgba(0,0,0,.5);
   font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
   border-radius: 20px;
   box-shadow: 0px 0px 15px rgb(77, 77, 77);
 }
 
-.alert.warning {
-  background-color: #ff9800; /* Orange */
+.alert-light{
+  padding: 20px;
+  
+  color: black;
+  margin: auto;
+  position: relative;
+  font-size: 18px;
+  width: 650px;
+  /* height: 20px; */
+  text-align: center;
+  top: 50px;
+  background-color: white;
+  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
+  border-radius: 20px;
+  box-shadow: 0px 0px 15px rgb(77, 77, 77);
 }
-
 
 
 
